; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/block/extr_blk-throttle.c_throtl_add_group_to_td_list.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/block/extr_blk-throttle.c_throtl_add_group_to_td_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.throtl_data = type { i32, i32 }
%struct.throtl_grp = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.throtl_data*, %struct.throtl_grp*)* @throtl_add_group_to_td_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @throtl_add_group_to_td_list(%struct.throtl_data* %0, %struct.throtl_grp* %1) #0 {
  %3 = alloca %struct.throtl_data*, align 8
  %4 = alloca %struct.throtl_grp*, align 8
  store %struct.throtl_data* %0, %struct.throtl_data** %3, align 8
  store %struct.throtl_grp* %1, %struct.throtl_grp** %4, align 8
  %5 = load %struct.throtl_grp*, %struct.throtl_grp** %4, align 8
  %6 = getelementptr inbounds %struct.throtl_grp, %struct.throtl_grp* %5, i32 0, i32 0
  %7 = load %struct.throtl_data*, %struct.throtl_data** %3, align 8
  %8 = getelementptr inbounds %struct.throtl_data, %struct.throtl_data* %7, i32 0, i32 1
  %9 = call i32 @hlist_add_head(i32* %6, i32* %8)
  %10 = load %struct.throtl_data*, %struct.throtl_data** %3, align 8
  %11 = getelementptr inbounds %struct.throtl_data, %struct.throtl_data* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = add nsw i32 %12, 1
  store i32 %13, i32* %11, align 4
  ret void
}

declare dso_local i32 @hlist_add_head(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
